--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ShiftBuddy</string>
+    <string name="title_activity_selection">SelectionActivity</string>
+    <string name="title_activity_payment">PaymentActivity</string>
 </resources>
