--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ShiftBuddy</string>
     <string name="title_activity_selection">SelectionActivity</string>
     <string name="title_activity_payment">PaymentActivity</string>
+    <string name="terms_and_conditions">Please read through the terms and conditions before use.</string>
 </resources>
